<resources>
    <string name="app_name">spike aware</string>
    <string name="todo">to</string>
    <string name="login">LOGIN</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter password</string>
    <string name="register">REGISTER</string>
    <string name="enter_name">Enter Name</string>
    <string name="an_emergency_adng_guidelines_application_to_pervent_spikeaware">An Emergency and guidelines application to pervent spikeaware</string>
    <string name="don_t_have_account_register_here">Don\'t have account? Register Here</string>
    <string name="login_here">Login Here!</string>
    <string name="logout">LOGOUT</string>
    <string name="spike_aware">SPIKE AWARE</string>
    <string name="alert_friends">SOS</string>
    <string name="add_friend">Add Friend</string>
    <string name="book_taxi">Book taxi</string>
    <string name="buy_spike_detectors">Buy Spike Detectors</string>
    <string name="know_more">Know More</string>
    <string name="news_on_spiking">News on Spiking</string>
    <string name="name">Name</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="map_key">AIzaSyDoRwKECDlPIHLmH1rWdpl_z_VXCwE0T5Q</string>
    <string name="alert_message_with_your_location_sent_to_your_friends">Alert Message with your location sent to your friends and \n 999</string>
    <string name="shop_and_stay_safe">SHOP AND STAY SAFE</string>
    <string name="stoptopps">stoptopps</string>
    <string name="buy">Buy</string>
    <string name="stop_stops_ceals_with_the_special_designed_glue_and_stops_spiking">Stop stops ceals with the special designed glue and stops spiking</string>
    <string name="anti_drink_stopper">Anti Drink Stopper</string>
    <string name="stops_the_drink_to_splits_and_safes">Stops the drink to splits and safes</string>
    <string name="mess">What is drink spiking?\n\n\n
A person’s drink can be spiked to make them more vulnerable for a variety of motives, including theft or sexual assault.
Different types of spiking can include the following substances being added to drinks:\n \n
•	Alcohol\n
•	‘Date rape’ drugs\n
•	Illegal drugs\n
•	Prescription drugs (e.g. stimulants, tranquilisers, sedatives, opiates)\n
Drink spiking can happen to any type of drink, whether alcoholic or non-alcoholic. The effects can be unpredictable but are likely to be more serious if someone who’s had their drink spiked has also consumed more alcohol, or other drugs. This is because of the combination of effects from the different drugs working at the same time.
Shots of alcohol can be added to drinks to make them stronger, causing someone to get drunk much quicker than expected. Or sometimes a drink can be spiked with drugs that are specifically designed to incapacitate someone.
Because there are no official statistics it’s difficult to know the true extent of the crime. Often people don’t report drink spiking, because they don’t remember details of the night, or they feel embarrassed.
It can be a scary experience and it’s important to be able to recognise the signs your drink has been spiked or how to help someone you suspect has been a victim.\n
\n
Symptoms of drink spiking\n
The effects of drink spiking vary depending on what you’ve been spiked with. Your symptoms could include:\n
•	Lowered inhibitions\n
•	Loss of balance\n
•	Feeling sleepy\n
•	Visual problems\n
•	Confusion\n
•	Nausea\n
•	Vomiting\n
•	Unconsciousness\n
The symptoms will depend on lots of factors such as the substance or mix of substances used (including the dose), your size and weight, and how much alcohol you have already consumed.
If you or a friend start to feel strange or more drunk than you should be, then get help straight away.\n\n
How to avoid drink spiking\n\n
Ensuring all venues are safe from assault and harassment such as drink spiking is a collective responsibility. All venues that are licensed to sell alcohol have a legal duty for public safety and the prevention of crime and disorder on their premises, and this is monitored by their local authority.2,3 These licenses to sell alcohol usually include conditions to ensure venues have appropriate security and staff training in place.
Some venues give out drink stoppers for the top of your bottle to prevent someone dropping something in your drink.\n
There are also testing kits that can be used to detect certain drugs. But these don’t test for all types of drugs, so don’t always work, and they can’t detect extra alcohol in your drink.
Reporting suspected drink spiking to a venue and the police is one way to ensure enough steps are being taken to keep people safe.\n
As individuals, there are also things we can do to help avoid being a victim of drink spiking.\n
Drink spiking can happen in any situation, at home or on a night out. However, there are a few things you can do to protect yourself:\n
•	Never leave your drink unattended, whether it’s alcoholic or not\n
•	Don’t accept a drink from someone you don’t know\n
•	Avoid drinking too much by sticking to the UK low risk drinking guidelines\n
•	Stick together with friends, and look out for each other\n
How to help a friend who you think has been spiked\n
If you think a friend has had their drink spiked, and they are showing any of the symptoms described above there are a few things you can do to help:\n
•	Tell a bar manager, bouncer or member of staff\n
•	Stay with them and keep talking to them\n
•	Call an ambulance if their condition deteriorates\n
•	Don’t let them go home on their own\n
•	Don’t let them leave with someone you don’t know or trust\n
•	Don’t let them drink more alcohol - this could lead to more serious problems\n
•	Report the incident to the police by calling 999 or 101\n
\n\n
More info:\n
https://www.drinkaware.co.uk/\n

\n
Anti drink spiking devices:\n

Protect yourself and others from drink spiking.\n
\n
https://www.amazon.co.uk/drink-spiking-prevention/s?k=drink+spiking+prevention\n
\n
https://www.stoptopps.com/\n
\n
https://www.drinkstuff.com/products/drink-safety.asp?nav=bc\n



\n\n
Spikeaware at our University\n
\n
https://www.tees-su.org.uk/spikeaware\n

\n\n

Taxi Services\n\n

https://www.borotaxis.co.uk/book-a-taxi/\n
\n
https://eb3.autocab.net/#/36505\n
\n
https://royal-cars.com/\n


\n\n
Support Services\n

\n\n
USEFUL LINKS:\n
Victim Support\n
Supportline: 08 08 16 89 111\n
Victim Support is an independent charity dedicated to supporting victims of crime in England and Wales.\n
We provide free and confidential 24/7 support and advice and you don’t have to have reported to the police to get our help.\n
Live chat:\n
victimsupport.org.uk/live-chat\n
Self-support guides:\n
mysupportspace.org.uk\n
Emergency Services\n
\n\n

999 and 112 is the national emergency response service in the UK\n


\n
    </string>
    <string name="textview">TextView</string>
</resources>