<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout7"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/logolight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_friend"
            android:textColor="@color/diffrentcolour"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/add_fri"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/logolight"
        android:text="@string/add_friend"
        android:textColor="#FFEBEE"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/fri_mob"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/enter_mobile_number"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/add_fri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/fri_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/fri_mob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/list_friends"
        android:layout_width="409dp"
        android:layout_height="532dp"
        android:background="@color/diffrentcolour"
        app:layout_constraintBottom_toTopOf="@+id/fri_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout7" />

</androidx.constraintlayout.widget.ConstraintLayout>